--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,8 @@
     "wordpress/wordpress": "3.9.2",
     "fancyguy/webroot-installer": "1.1.0",
     "composer/installers": "v1.0.12",
-    "vlucas/phpdotenv": "~1.0.6"
+    "vlucas/phpdotenv": "~1.0.6",
+    "wpackagist-plugin/woocommerce": "2.1.12"
   },
   "extra": {
     "installer-paths": {
